# social_api

./: .gitignore  main.py  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
