[tool.poetry]
name = "social"
version = "0.1.0"
description = ""
authors = ["Nate Allen <nallen@directionsresearch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.88.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
